--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <div class="square" style="text-align: center;">
     <img src="https://i.gyazo.com/fb6373fff35ed71fc168a2127c244231.png">
     <h3> Improve your front-end skills by building projects</h3>
-    <p> Scan the QR code to visit Frontend Mentor and push your skills to another level</p>
+    <p> Scan the QR code to visit Frontend Mentor and push your skills to another levela</p>
   </div>
 </body>
